--- a/LoginApp/app/src/main/res/layout/atv_main.xml
+++ b/LoginApp/app/src/main/res/layout/atv_main.xml
@@ -44,7 +44,7 @@
 
 
         <EditText
-            android:id="@+id/ediPassword"
+            android:id="@+id/editPassword"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="center"
